k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app
  namespace: simple-app
spec:
  type: LoadBalancer
  selector:
    app: simple-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
